Added ENV variables to Dockerfile